# Open-RFNet

./: .gitignore  README.md  RESULTS.md  pyproject.toml
configs/: paper.yaml  paper_bandaware.yaml  paper_denoise.yaml  paper_denoise_aug.yaml  paper_frozen.yaml  paper_reproduction.yaml  quick.yaml  rtx3090.yaml  rtx3090_finetune.yaml  smoke.yaml
scripts/: run_pipeline.py
src/open_rfnet/: __init__.py  cli.py  constants.py  data.py  gan.py  losses.py  metrics.py  model.py  openmax.py  training.py
tests/: test_core.py
