[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "open-rfnet-reproduction"
version = "0.1.0"
description = "Clean-room reproduction of Open-RFNet for DroneRFa open-set recognition"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "h5py>=3.10",
  "numpy>=1.26",
  "PyYAML>=6.0",
  "scikit-learn>=1.3",
  "scipy>=1.11",
  "torch>=2.2",
  "tqdm>=4.66",
]

[project.optional-dependencies]
test = ["pytest>=8"]

[project.scripts]
open-rfnet = "open_rfnet.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

